<resources>
    <string name="app_name">Prescriptions</string>
    <string name="action_settings">Settings</string>
    <string name="medicine_name_query">Please say the name of the medicine.</string>
    <string name="tv_name">Name</string>
    <string name="tv_sypmtoms">Symptoms</string>
    <string name="tv_adivce">Advice</string>
    <string name="tv_prescription">Prescriptions</string>
    <string name="tv_diagnosis">Diagnosis</string>
    <string name="minus_btn">-</string>
    <string name="tv_age">Age</string>
    <string name="tv_gender">Gender</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
